@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.32 2002/09/04 04:24:57 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.33 2002/09/04 04:28:11 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1416,3 +1416,6 @@ sys/netiso/if_eon.c				1.37
 
 sys/netinet6/ip6_mroute.c			1.36 via patch
   correct multicast packet MTU check.  sync w/kame
+
+usr.bin/join/join.c				1.21
+  finish fixing PR#15412
